      when possible.  Bazaar 1.6 no longer interoperates with 0.15 and earlier via
      these protocols.  Use alternatives like SFTP or upgrade those servers.
      (Andrew Bennetts, #83935)

  IMPROVEMENTS:

  BUGFIXES:

    * Issue a warning and ignore passwords declared in authentication.conf when
      used for an ssh scheme (sftp or bzr+ssh).
      (Vincent Ladeuil, #203186)


  DOCUMENTATION:

    * Incorporate feedback from Jelmer Vernooij and Neil Martinsen-Burrell
      on the plugin and integration chapters of the User Guide.
      (Ian Clatworthy)

  TESTING:

    * New helper function for splitting test suites
      ``split_suite_by_condition``. (Robert Collins)

  INTERNALS:

  API BREAKS:

    * Many methods on ``VersionedFile``, ``Repository`` and in
      ``bzrlib.revision``  deprecated before bzrlib 1.5 have been removed.
      (Robert Collins)

    * ``VersionedFile.join`` is deprecated. This method required local
      instances of both versioned file objects and was thus hostile to being
      used for streaming from a smart server. The new get_record_stream and
      insert_record_stream are meant to efficiently replace this method.
      (Robert Collins)


bzr 1.5 2008-05-16
------------------

This release of Bazaar includes several updates to the documentation, and fixes
to prepare for making rich root support the default format. Many bugs have been
squashed, including fixes to log, bzr+ssh inter-operation with older servers.

  CHANGES:

    * Suppress deprecation warnings when bzrlib is a 'final' release. This way
      users of packaged software won't be bothered with DeprecationWarnings,
      but developers and testers will still see them. (John Arbash Meinel)

  DOCUMENTATION:

    * Incorporate feedback from Jelmer Vernooij and Neil Martinsen-Burrell
      on the plugin and integration chapters of the User Guide.
      (Ian Clatworthy)


bzr 1.5rc1 2008-05-09
---------------------

  NOTES WHEN UPGRADING:

  CHANGES:
